# game_theoretic_painting

./: .gitignore  README.md  license
coverage_contest/: CMakeLists.txt  package.xml
coverage_contest/config/: params.yaml
coverage_contest/include/coverage_contest/: agents.hpp  board.h  board.hpp  board_constructor.h  dynamics.h  game_manager.h  game_visualizer.h  mcts.h  play_game.h  players.h
coverage_contest/launch/: load_game.launch
coverage_contest/logs/: 1700699580.228791.csv  1700714488.623916.csv  1700722482.625363.csv  1700759445.689725.csv  1700840480.564566.csv
coverage_contest/logs/archive/: 1700698727.067848.csv
coverage_contest/rviz/: config.rviz
coverage_contest/src/: board_constructor.cpp  game_manager.cpp  game_visualizer.cpp  mcts.cpp  play_game.cpp
haphephobia/: CMakeLists.txt  package.xml
haphephobia/include/haphephobia/: clusterer.h  common.h  point.h  pose_generator.h  vf_generator.h
haphephobia/src/: cartesian_executor.py  clusterer.cpp  pose_generator.cpp  vf_generator.cpp
haphephobia/srv/: cluster_pc.srv  create_compliant_poses.srv  create_vfs.srv  generate_cartesian_plan.srv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/coverage_contest/lib/coverage_contest/: play_game
install/coverage_contest/share/ament_index/resource_index/parent_prefix_path/: coverage_contest
install/coverage_contest/share/coverage_contest/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/coverage_contest/share/coverage_contest/cmake/: coverage_contestConfig.cmake
log/: latest_build
models/: info.txt
spot/spot_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
spot/spot_arm_moveit_config/config/: fake_controllers.yaml  gazebo_spot.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_ouster_pointcloud.yaml  simple_moveit_controllers.yaml  spot.srdf  stomp_planning.yaml
spot/spot_arm_moveit_config/launch/: UI.rviz  UI_demo.launch  UI_map.rviz  chomp_planning_pipeline.launch.xml  coverage_demo.launch  debug.rviz  default_warehouse_db.launch  demo.launch  demo_sim.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  spot_arm_planning_execution.launch  stomp_planning_pipeline.launch.xml  surface_repair_UI.rviz  surface_repair_coverage.rviz
spot/spot_description/urdf/: spot.urdf.xacro
spot/spot_description/urdf/arm/: model.urdf  spot_arm.urdf.xacro
spot/spot_lidar_description/: CMakeLists.txt  package.xml
spot/spot_lidar_description/launch/: description.launch
spot/spot_lidar_description/urdf/: accessories.urdf.xacro  constants.urdf.xacro  spot.urdf  spot.urdf.xacro  spot_full.urdf.xacro  spot_leg.urdf.xacro
spot/spot_lidar_description/urdf/arm/: spot_arm_inertia.urdf.xacro
src/coverage_contest/: CMakeLists.txt
src/coverage_contest/include/coverage_contest/: agents.hpp  board.hpp  common.h  game_manager.h  game_visualizer.h  play_game.h  point.h
src/coverage_contest/launch/: load_game.launch
src/coverage_contest/logs/: 1700709445.303678.csv  1700718495.329853.csv  1700756677.785566.csv  1700757947.226758.csv  1700759348.090450.csv  1700759445.689725.csv  1700889870.143867.csv  1700953364.386432.csv  1701021578.435971.csv
src/coverage_contest/logs/archive/: 1700689457.154321.csv  1700691866.336477.csv  1700695535.936978.csv  1700696562.225693.csv  1700698242.286955.csv
src/coverage_contest/models/: info.txt
src/coverage_contest/src/: game_visualizer.cpp  mcts.cpp  play_game.cpp
